# Youtube-Notion-Summary-MCP-Server

./: Dockerfile  README.md  fetch_youtube_transcripts.py  generate_api_key.py  pyproject.toml  requirements.txt
