[project]
name = "youtube-transcript-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "mcp[cli]>=1.10.1",
    "requests>=2.32.4",
    "youtube-transcript-api>=1.1.0",
    "python-dotenv>=1.0.0",
]
